--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes" />
 	<meta name="apple-mobile-web-app-capable" content="yes"/> 
-    <link rel="stylesheet" type="text/css" href="font_Icon/iconfont.css">
-    <link rel="stylesheet" type="text/css" href="css/chat.css">
+    <link rel="stylesheet" type="text/css" href="__FONT__/iconfont.css">
+    <link rel="stylesheet" type="text/css" href="__CSS__/chat.css">
 
 </head>
 <body>
@@ -37,84 +37,84 @@
         <div class="chatBox-info">
             <div class="chatBox-list" ref="chatBoxlist">
                 <div class="chat-list-people">
-                    <div><img src="img/icon01.png" alt="头像"/></div>
+                    <div><img src="__IMAGE__/icon01.png" alt="头像"/></div>
                     <div class="chat-name">
                         <p>自酌一杯酒</p>
                     </div>
                     <div class="message-num">10</div>
                 </div>
                 <div class="chat-list-people">
-                    <div><img src="img/icon02.png" alt="头像"/></div>
+                    <div><img src="__IMAGE__/icon02.png" alt="头像"/></div>
                     <div class="chat-name">
                         <p>白兰地</p>
                     </div>
                     <div class="message-num">8</div>
                 </div>
                 <div class="chat-list-people">
-                    <div><img src="img/icon03.png" alt="头像"/></div>
+                    <div><img src="__IMAGE__/icon03.png" alt="头像"/></div>
                     <div class="chat-name">
                         <p>威士忌</p>
                     </div>
                     <div class="message-num">2</div>
                 </div>
                 <div class="chat-list-people">
-                    <div><img src="img/icon01.png" alt="头像"/></div>
+                    <div><img src="__IMAGE__/icon01.png" alt="头像"/></div>
                     <div class="chat-name">
                         <p>荷兰金酒</p>
                     </div>
                     <div class="message-num">20</div>
                 </div>
                 <div class="chat-list-people">
-                    <div><img src="img/icon03.png" alt="头像"/></div>
+                    <div><img src="__IMAGE__/icon03.png" alt="头像"/></div>
                     <div class="chat-name">
                         <p>朗姆酒</p>
                     </div>
                     <div class="message-num">10</div>
                 </div>
                 <div class="chat-list-people">
-                    <div><img src="img/icon02.png" alt="头像"/></div>
+                    <div><img src="__IMAGE__/icon02.png" alt="头像"/></div>
                     <div class="chat-name">
                         <p>特其拉酒</p>
                     </div>
                     <div class="message-num">18</div>
                 </div>
                 <div class="chat-list-people">
-                    <div><img src="img/icon02.png" alt="头像"/></div>
+                    <div><img src="__IMAGE__/icon02.png" alt="头像"/></div>
                     <div class="chat-name">
                         <p>鸡尾酒</p>
                     </div>
                     <div class="message-num">9</div>
                 </div>
                 <div class="chat-list-people">
-                    <div><img src="img/icon01.png" alt="头像"/></div>
+                    <div><img src="__IMAGE__/icon01.png" alt="头像"/></div>
                     <div class="chat-name">
                         <p>虎骨酒</p>
                     </div>
                     <div class="message-num">12</div>
                 </div>
                 <div class="chat-list-people">
-                    <div><img src="img/icon01.png" alt="头像"/></div>
+                    <div><img src="__IMAGE__/icon01.png" alt="头像"/></div>
                     <div class="chat-name">
                         <p>琴酒</p>
                     </div>
                     <div class="message-num">99+</div>
                 </div>
                 <div class="chat-list-people">
-                    <div><img src="img/icon02.png" alt="头像"/></div>
+                    <div><img src="__IMAGE__/icon02.png" alt="头像"/></div>
                     <div class="chat-name">
                         <p>葡萄酒</p>
                     </div>
                     <div class="message-num"></div>
                 </div>
                 <div class="chat-list-people">
-                    <div><img src="img/icon01.png" alt="头像"/></div>
+                    <div><img src="__IMAGE__/icon01.png" alt="头像"/></div>
                     <div class="chat-name">
                         <p>蓝莓酒</p>
                     </div>
                     <div class="message-num"></div>
                 </div>
                 <div class="chat-list-people">
-                    <div><img src="img/icon03.png" alt="头像"/></div>
+                    <div><img src="__IMAGE__/icon03.png" alt="头像"/></div>
                     <div class="chat-name">
                         <p>樱花酒</p>
                     </div>
@@ -130,7 +130,7 @@
                                 <small class="chat-date">2017-12-02 14:26:58</small>
                             </div>
                             <div class="left">
-                                <div class="chat-avatars"><img src="img/icon01.png" alt="头像"/></div>
+                                <div class="chat-avatars"><img src="__IMAGE__/icon01.png" alt="头像"/></div>
                                 <div class="chat-message">
                                     给你看张图
                                 </div>
@@ -142,9 +142,9 @@
                                 <small class="chat-date">2017-12-02 14:26:58</small>
                             </div>
                             <div class="left">
-                                <div class="chat-avatars"><img src="img/icon01.png" alt="头像"/></div>
+                                <div class="chat-avatars"><img src="__IMAGE__/icon01.png" alt="头像"/></div>
                                 <div class="chat-message">
-                                    <img src="img/1.png" alt="">
+                                    <img src="__IMAGE__/1.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -155,7 +155,7 @@
                             </div>
                             <div class="right">
                                 <div class="chat-message">嗯，适合做壁纸</div>
-                                <div class="chat-avatars"><img src="img/icon02.png" alt="头像"/></div>
+                                <div class="chat-avatars"><img src="__IMAGE__/icon02.png" alt="头像"/></div>
                             </div>
                         </div>
 
@@ -222,7 +222,7 @@
 </div>
 
 
-<script src="js/jquery.min.js"></script>
+<script src="__JS__/jquery.min.js"></script>
 <script>
 
     screenFuc();
@@ -310,7 +310,7 @@
             $(".chatBox-content-demo").append("<div class=\"clearfloat\">" +
                 "<div class=\"author-name\"><small class=\"chat-date\">2017-12-02 14:26:58</small> </div> " +
                 "<div class=\"right\"> <div class=\"chat-message\"> " + textContent + " </div> " +
-                "<div class=\"chat-avatars\"><img src=\"img/icon01.png\" alt=\"头像\" /></div> </div> </div>");
+                "<div class=\"chat-avatars\"><img src=\"__IMAGE__/icon01.png\" alt=\"头像\" /></div> </div> </div>");
             //发送后清空输入框
             $(".div-textarea").html("");
             //聊天框默认最底部
@@ -338,7 +338,7 @@
             $(".chatBox-content-demo").append("<div class=\"clearfloat\">" +
                 "<div class=\"author-name\"><small class=\"chat-date\">2017-12-02 14:26:58</small> </div> " +
                 "<div class=\"right\"> <div class=\"chat-message\"> " + bq + " </div> " +
-                "<div class=\"chat-avatars\"><img src=\"img/icon01.png\" alt=\"头像\" /></div> </div> </div>");
+                "<div class=\"chat-avatars\"><img src=\"__IMAGE__/icon01.png\" alt=\"头像\" /></div> </div> </div>");
             //发送后关闭表情框
             $(".biaoqing-photo").toggle();
             //聊天框默认最底部
@@ -359,7 +359,7 @@
             $(".chatBox-content-demo").append("<div class=\"clearfloat\">" +
                 "<div class=\"author-name\"><small class=\"chat-date\">2017-12-02 14:26:58</small> </div> " +
                 "<div class=\"right\"> <div class=\"chat-message\"><img src=" + images + "></div> " +
-                "<div class=\"chat-avatars\"><img src=\"img/icon01.png\" alt=\"头像\" /></div> </div> </div>");
+                "<div class=\"chat-avatars\"><img src=\"__IMAGE__/icon01.png\" alt=\"头像\" /></div> </div> </div>");
             //聊天框默认最底部
             $(document).ready(function () {
                 $("#chatBox-content-demo").scrollTop($("#chatBox-content-demo")[0].scrollHeight);
